# pycli

./: .github_changelog_generator  Makefile  pyproject.toml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/actions/test/: action.yml
.github/workflows/: create_tag.yml  pr.yml  pr.yml.bak  release.yml  release.yml.bak  test.yml  test.yml.bak  version-check.yml
src/pycli/: cli.py  test_cli.py
src/pycli-template/: cli.py
