[build-system]
requires = [
  "hatchling >= 1.26",
  "hatch-requirements-txt >= 0.4.1"
]
build-backend = "hatchling.build"

[project]
name = "pycli"
description = "A command-line tool"
keywords = ["cli"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [
  {name = "Jeremy Watkins", email = "DevOpsJeremy@gmail.com"}
]
maintainers = [
  {name = "Jeremy Watkins", email = "DevOpsJeremy@gmail.com"}
]

dynamic = [
  "dependencies",
  "version"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://example.com/docs"
Repository = "https://github.com/DevOpsJeremy/pycli"
Issues = "https://github.com/DevOpsJeremy/pycli/issues"
Changelog = "https://github.com/DevOpsJeremy/pycli/blob/main/CHANGELOG.md"

[project.scripts]
pycli = "pycli.cli:pycli"

[tool.hatch.version]
path = "src/pycli/__init__.py"

[tool.hatch.build]
sources = ["src"]

[tool.hatch.build.targets.wheel]
include = ["pycli"]

[tool.hatch.build.targets.sdist]
include = ["pycli", "/requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt]
filename = "requirements.txt"

[tool.pytest]
strict = true
addopts = ["--junit-xml", "pytest.junit.xml", "--github-report"]
junit_suite_name = "pycli"

[tool.ruff]
output-format = "github"

